<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_firstSection">
        <item
            android:id="@+id/nav_star"
            android:title="@string/reviews"
            android:icon="@drawable/star" />

        <item
            android:id="@+id/nav_favorite"
            android:title="@string/favorite"
            android:icon="@drawable/favorite" />

        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/search" />
    </group>
    <group
        android:id="@+id/menu_secondSection">

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/user" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting"
            android:icon="@drawable/settings" />
    </group>
</menu>